# ezLibs

./: .bazelrc  .clang-format  .gitignore  BAZEL.md  BUILD.bazel  CMakeLists.txt  CMakePresets.json  Makefile  README.md  WORKSPACE  default.profraw
.github/workflows/: Coverage.yml  Linux.yml  Osx.yml  Win.yml
Tests/: CMakeLists.txt
Tests/BuildInc/: CMakeLists.txt
Tests/TestApp/: BUILD.bazel  CMakeLists.txt  TestEzApp.cpp  TestEzApp.h  TestEzArgs.cpp  TestEzArgs.h  TestEzBuildInc.cpp  TestEzBuildInc.h  main.cpp
Tests/TestCom/: BUILD.bazel  CMakeLists.txt  TestEzNamedPipe.cpp  TestEzNamedPipe.h  main.cpp
Tests/TestComp/: BUILD.bazel  CMakeLists.txt  TestEzLzw.cpp  TestEzLzw.h  main.cpp
Tests/TestFile/: BUILD.bazel  CMakeLists.txt  TestEzBinBuf.cpp  TestEzBinBuf.h  TestEzBmp.cpp  TestEzBmp.h  TestEzFile.cpp  TestEzFile.h  TestEzFileWatcher.cpp  TestEzFileWatcher.h  TestEzGif.cpp  TestEzGif.h  TestEzJson.cpp  TestEzJson.h  TestEzPng.cpp  TestEzSvg.cpp  TestEzSvg.h  TestEzVdbWriter.cpp  TestEzVdbWriter.h  TestEzVoxWriter.cpp  TestEzVoxWriter.h  TestEzXmlConfig.cpp  TestEzXmlConfig.h  main.cpp
Tests/TestGeo/: BUILD.bazel  CMakeLists.txt  TestEzFormats.cpp  TestEzFormats.h  TestEzGeo.cpp  TestEzGeo.h  TestEzTile.cpp  TestEzTile.h  main.cpp
Tests/TestMath/: BUILD.bazel  CMakeLists.txt  TestEzAABB.cpp  TestEzAABB.h  TestEzAABBCC.cpp  TestEzAABBCC.h  TestEzExpr.cpp  TestEzExpr.h  TestEzExprBuiltins.cpp  TestEzExprBuiltins.h  TestEzExprConstants.cpp  TestEzExprConstants.h  TestEzExprExceptions.cpp  TestEzExprExceptions.h  TestEzExprParsings.cpp  TestEzExprParsings.h  TestEzExprPerfos.cpp  TestEzExprPerfos.h  TestEzMat2.cpp  TestEzMat2.h  TestEzMath.cpp  TestEzMath.h  TestEzMath.rar  TestEzQuat.cpp  TestEzQuat.h  TestEzVec2.cpp  TestEzVec2.h  TestEzVec3.cpp  TestEzVec3.h  TestEzVec4.cpp  TestEzVec4.h  main.cpp
Tests/TestMisc/: BUILD.bazel  CMakeLists.txt  TestEzCmdProcessor.cpp  TestEzCmdProcessor.h  TestEzCnt.cpp  TestEzCnt.h  TestEzFigFont.cpp  TestEzFigFont.h  TestEzGraph.cpp  TestEzGraph.h  TestEzLog.cpp  TestEzLog.h  TestEzQrCode.cpp  TestEzQrCode.h  TestEzScreen.cpp  TestEzScreen.h  TestEzSha.cpp  TestEzSha.h  TestEzSqlite.cpp  TestEzSqlite.h  TestEzStackString.cpp  TestEzStackString.h  TestEzStr.cpp  TestEzStr.h  TestEzTemplater.cpp  TestEzTemplater.h  TestEzXml.cpp  TestEzXml.h  main.cpp
Tests/TestOpengl/: BUILD.bazel  CMakeLists.txt  TestEzGLBufferBlock.cpp  TestEzGLBufferBlock.h  TestEzGLCanvas.cpp  TestEzGLCanvas.h  TestEzGLCompVfx.cpp  TestEzGLCompVfx.h  TestEzGLMeshVfx.cpp  TestEzGLMeshVfx.h  TestEzGLProcMesh.cpp  TestEzGLProcMesh.h  TestEzGLProgram.cpp  TestEzGLProgram.h  TestEzGLQuadVfx.cpp  TestEzGLQuadVfx.h  TestEzGLQuadVfxAuto.cpp  TestEzGLQuadVfxAuto.h  TestEzGLShader.cpp  TestEzGLShader.h  TestEzGLTexture.cpp  TestEzGLTexture.h  TestEzGLUniforms.cpp  TestEzGLUniforms.h  glContext.cpp  glContext.h  main.cpp
Tests/TestOpengl/inputs/: quadVfx.frag
Tests/TestTime/: BUILD.bazel  CMakeLists.txt  TestEzCron.cpp  TestEzCron.h  TestEzDate.cpp  TestEzDate.h  TestEzTime.cpp  TestEzTime.h  main.cpp
Tests/coverage/: CMakeLists.txt  collect_show_report.sh  convert_to_utf8.py  coverage.cmake  export_lcov_genhtml.sh  merge_profraw.sh  patch_genhtml_forcecover_inline.py  run_force_cover_headers.cmake
Tests/coverage/forceCover/: CMakeLists.txt  Makefile
Tests/ezBuildInc/: BUILD.bazel  main.cpp
_codeql_build_dir/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/Tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/Tests/TestApp/: CTestTestfile.cmake  EzLibs_TestApp  Makefile  cmake_install.cmake
_codeql_build_dir/Tests/TestCom/: CTestTestfile.cmake  EzLibs_TestCom  Makefile  cmake_install.cmake
_codeql_build_dir/Tests/TestComp/: CTestTestfile.cmake  Makefile  cmake_install.cmake
_codeql_build_dir/Tests/TestFile/: CTestTestfile.cmake  EzLibs_TestFile  Makefile  cmake_install.cmake
_codeql_build_dir/Tests/TestGeo/: CTestTestfile.cmake  EzLibs_TestGeo  Makefile  cmake_install.cmake
_codeql_build_dir/Tests/TestMath/: CTestTestfile.cmake  EzLibs_TestMath  Makefile  cmake_install.cmake
_codeql_build_dir/Tests/TestMisc/: CTestTestfile.cmake  EzLibs_TestMisc  Makefile  cmake_install.cmake
_codeql_build_dir/Tests/TestOpengl/: CTestTestfile.cmake  EzLibs_TestOpengl  Makefile  cmake_install.cmake
_codeql_build_dir/Tests/TestTime/: CTestTestfile.cmake  EzLibs_TestTime  Makefile  cmake_install.cmake
_codeql_build_dir/Tests/ezBuildInc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_linux_release/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_linux_release/Testing/Temporary/: CTestCostData.txt
build_linux_release/Tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_linux_release/Tests/TestApp/: CTestTestfile.cmake  EzLibs_TestApp  Makefile  cmake_install.cmake
build_linux_release/Tests/TestCom/: CTestTestfile.cmake  EzLibs_TestCom  Makefile  cmake_install.cmake
build_linux_release/Tests/TestComp/: CTestTestfile.cmake  EzLibs_TestComp  Makefile  cmake_install.cmake
build_linux_release/Tests/TestFile/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_linux_release/Tests/TestGeo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_linux_release/Tests/TestMath/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_linux_release/Tests/TestMisc/: CTestTestfile.cmake  Makefile  cmake_install.cmake
doc/: ezArgs.md  ezCron.md  figfont.spec
include/: ezlibs.hpp
include/ezlibs/: ezAABB.hpp  ezAABBCC.hpp  ezActions.hpp  ezApp.hpp  ezArgs.hpp  ezBinBuf.hpp  ezBmp.hpp  ezBuildInc.hpp  ezCTest.hpp  ezClass.hpp  ezCmdProcessor.hpp  ezCnt.hpp  ezCron.hpp  ezCsv.hpp  ezDate.hpp  ezEmbed.hpp  ezExpr.hpp  ezFdGraph.hpp  ezFigFont.hpp  ezFile.hpp  ezFileWatcher.hpp  ezFmt.hpp  ezGeo.hpp  ezGif.hpp  ezGraph.hpp  ezImGui.hpp  ezIni.hpp  ezJson.hpp  ezLog.hpp  ezLzw.hpp  ezMat2.hpp  ezMat3.hpp  ezMat4.hpp  ezMath.hpp  ezNamedPipe.hpp  ezNet.hpp  ezPlane.hpp  ezPlugin.hpp  ezPng.hpp  ezQuadTree.hpp  (+21 more)
(+44 files in other folders)
