# Tests for App libraries

cc_test(
    name = "TestApp",
    size = "small",
    srcs = glob([
        "*.cpp",
        "*.h",
    ]),
    copts = ["-std=c++11"],
    defines = [
        'RESULTS_PATH="TestResults/ezLibs/"',
        'SAMPLES_PATH="samples/"',
    ],
    deps = [
        "//:ezApp",
        "//:ezArgs",
        "//:ezBuildInc",
    ],
)
