# Tests for Communication libraries

cc_test(
    name = "TestCom",
    size = "small",
    srcs = glob([
        "*.cpp",
        "*.h",
    ]),
    copts = ["-std=c++11"],
    defines = [
        'RESULTS_PATH="TestResults/ezLibs/"',
        'SAMPLES_PATH="samples/"',
    ],
    deps = [
        "//:ezNamedPipe",
    ],
)
