# Tests for File libraries

cc_test(
    name = "TestFile",
    size = "small",
    srcs = glob([
        "*.cpp",
        "*.h",
    ]),
    copts = ["-std=c++11"],
    defines = [
        'RESULTS_PATH="TestResults/ezLibs/"',
        'SAMPLES_PATH="samples/"',
    ],
    deps = [
        "//:ezIni",
        "//:ezLog",
        "//:ezBmp",
        "//:ezFile",
        "//:ezBinBuf",
        "//:ezVdbWriter",
        "//:ezVoxWriter",
        "//:ezXmlConfig",
    ],
)
