# Tests for Geo libraries

cc_test(
    name = "TestGeo",
    size = "small",
    srcs = glob([
        "*.cpp",
        "*.h",
    ]),
    copts = ["-std=c++11"],
    data = glob(["inputs/**/*"]),
    defines = [
        'RESULTS_PATH="TestResults/ezLibs/"',
        'SAMPLES_PATH="samples/"',
    ],
    deps = [
        "//:ezCron",
        "//:ezGeo",
        "//:ezTile",
    ],
)
